Fix a Java web start issue that appeared with jdk 7u45